samples/_failures_safe/1761461588_af9c4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fd2e87c1.c: In function ‘main’:
./samples/SAFE/__tmp_fd2e87c1.c:165:5: error: expected declaration or statement at end of input
  165 |     } else {
      |     ^
./samples/SAFE/__tmp_fd2e87c1.c:165:5: error: expected declaration or statement at end of input
